Add Makefile and Catch2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.9)
 project(quad_edge VERSION 0.1.0 DESCRIPTION "Quad-Edge Implementation in C++")
 
+# Prepare "Catch" library for other executables
+set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern/catch)
+add_library(Catch2::Catch IMPORTED INTERFACE)
+set_property(Catch2::Catch PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CATCH_INCLUDE_DIR}")
+
+
 add_library(quad_edge SHARED
     array.cc
     array.hh
